--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: "Poppins", sans-serif;
   }
   body {
-    background-color: #f4c531;
+    background-color: blue;
   }
   .wrapper {
     box-sizing: content-box;
