--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     backface-visibility: hidden;
   }
   .card-before {
-    background-color: #f4c531;
+    background-color: moccasin;
     font-size: 2.8em;
     font-weight: 600;
   }
