--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: #f4c531;
+    background-color: gray;
     top: 0;
   }
   button {
