--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@
     font-size: 1.1em;
     display: block;
     margin: 1.1em auto 0 auto;
-    background-color: #000000;
+    background-color:red;
     color: #ffffff;
   }
   .controls-container button {
