--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@
   }
   #result h2 {
     font-size: 2.5em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   #result h4 {
     font-size: 1.8em;
