--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@
     border-radius: 0.3em;
     padding: 1em 1.5em;
     cursor: pointer;
+    color: darkcyan;
   }
   #stop {
     font-size: 1.1em;
