--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@
   #result {
     text-align: center;
     text-decoration-style: solid;
+    text-decoration: solid;
   }
   #result h2 {
     font-size: 2.7em;
